@@ -3,7 +3,7 @@
 
 # You can set these variables from the command line.
 SPHINXOPTS    =
-SPHINXBUILD   = sphinx-build
+SPHINXBUILD   = C:\Python27\Scripts\sphinx-build.exe
 PAPER         =
 BUILDDIR      = _build
 
